[workspace]
resolver = "2"
members = ["common", "sdk", "program", "examples/abort", "examples/adjust_slippage"]

[workspace.dependencies]
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-log = "0.4.0"
eyre = "0.6.12"
solana-program = "2.2"

## deps for running the examples
solana-account = "2.2"
solana-keypair = "2.2"
solana-signer = "2.2"
solana-instruction = "2.2"
solana-transaction = "2.2"
solana-transaction-error = "2.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
litesvm = "0.6.1"
tokio = { version = "1.46.1", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
